[20241214] Downgrade Java and Scala version to support backward compatibility with other dependencies ## Updates - Downgraded Java version to 8. - Downgraded Scala version to 2.12. - Converted the `etl-batch` and `etl-sentry` to a Scala project. - Added Scala library and test dependencies.   - scalaLibVersion = '2.12.20'   - scalaTestVersion = '3.2.19'   - scalaTestPlusVersion = '3.2.19.0'   - scalaMockitoVersion = '1.17.37' - Removed the mockito dependency since the older version cannot mock a final class.